--- a/index.html
+++ b/index.html
@@ -15,7 +15,13 @@
     </header>
     <main>
         <div class="hero-img"></div>
-        <div class="hero-content"></div>
+        <div class="hero-content">
+            <div class="ps5">
+            <div class="content">
+                <p>Feel incredible gaming possibilities that go beyond the extraordinary with PlayStation®5 and PS5® Digital Edition consoles.</p>
+            </div>
+            </div>
+        </div>
     </main>
 </body>
 </html>
