--- a/index.html
+++ b/index.html
@@ -23,5 +23,14 @@
             </div>
         </div>
     </main>
+    <section>
+        <div class="section1">
+            <div class="section1-content">
+                <h1>PLAY LIKE NEVER BEFORE®</h1>
+                <p>Experience lightning-fast loading with an ultra-high speed SSD, deeper immersion with support for haptic feedback1, adaptive triggers1 and 3D Audio1, and an incredible collection of PlayStation games.</p>
+                <div class="section1-img"></div>
+            </div>
+        </div>
+    </section>
 </body>
 </html>
