--- a/index.html
+++ b/index.html
@@ -12,17 +12,14 @@
             <div class="logo"></div>
             <button type="button" class="buynow">Buynow</button>
         </div>
-    </header>
-    <main>
-        <div class="hero-img"></div>
-        <div class="hero-content">
-            <div class="ps5">
-            <div class="content">
-                <p>Feel incredible gaming possibilities that go beyond the extraordinary with PlayStation®5 and PS5® Digital Edition consoles.</p>
-            </div>
-            </div>
+    <div class="hero-img"></div>
+    <div class="hero-content">
+        <div class="ps5"></div>
+        <div class="content">
+            <p>Feel incredible gaming possibilities that go beyond the extraordinary with<br> PlayStation 5 and PS5 Digital Edition consoles.</p>
         </div>
-    </main>
+    </div>
+</header>
     <section>
         <div class="section1">
             <div class="section1-content">
