--- a/index.html
+++ b/index.html
@@ -29,5 +29,35 @@
             </div>
         </div>
     </section>
+    <div class="section-2">
+    <div class="grid-box">
+        <div class="box1 box big">
+            <div class="container">
+            <div class="log "></div>
+            <h4>STUNNING GAMES</h4>
+            <p>Explore spectacular new worlds in generation-defining games exclusive to PlayStation consoles.</p>
+        </div>
+            <div class="big-pic"></div>
+        </div>
+        <div class="small">
+            <div class="box2 box">
+                <div class="pic1 pic"></div>
+                <div class="container">
+                <div class="symbol sym2"></div>
+                <h2>LIGHTNING SPEED</h2>
+                <p>Jump into the action and keep play moving with ultra-fast, integrated<br> console technology.</p>
+                </div>
+            </div>
+            <div class="box3 box">
+                <div class="pic1 pic"></div>
+                <div class="container">
+                <div class="symbol sym3"></div>
+                <h3>BREATHTAKING IMMERSION</h3>
+                <p>Put yourself at the heart of the game with responsive controls, 360-<br>degree audio1, and intricate graphical detail.
+                </p>
+            </div>
+        </div>
+    </div>
+    </div>
 </body>
 </html>
