--- a/index.html
+++ b/index.html
@@ -21,6 +21,7 @@
     </div>
 </header>
     <section>
+        <!-- SECTION-1 -->
         <div class="section1">
             <div class="section1-content">
                 <h1>PLAY LIKE NEVER BEFORE®</h1>
@@ -29,6 +30,7 @@
             </div>
         </div>
     </section>
+    <!-- SECTION-2 -->
     <div class="section-2">
     <div class="grid-box">
         <div class="box1 box big">
@@ -59,5 +61,35 @@
         </div>
     </div>
     </div>
+</div>
+
+<!-- SECTION-3 -->
+
+<div class="section-3">
+    <div class="sec3-grid">
+        <div class="box-3">
+            <div class="sec3-ig img1 "></div>
+            <div class="sec3-cont">
+                <h6>PS5 console exclusives</h6>
+                <p>Experience generation-defining games from PlayStation Studios.</p>
+            </div>
+        </div>
+        <div class="box-3">
+            <div class="sec3-ig img2"></div>
+            <div class="sec3-cont">
+                <h6>Play the biggest games on PlayStation</h6>
+                <p>Join millions of players in legendary titles like Fortnite, Final<br> Fantasy VII Rebirth, and Grand Theft Auto V.</p>
+            </div>
+        </div>
+        <div class="box-3">
+            <div class="sec3-ig img3"></div>
+            <div class="sec3-cont">
+                <h6>Backwards compatible with PS4®</h6>
+                <p>Play over 8,500 PS4 games3 on PS5 consoles. Enjoy faster and<br> smoother frame rates in select PS4 games with PS5’s Game Boost technology.</p>
+            </div>
+        </div>
+    </div>
+</div>
+
 </body>
 </html>
