--- a/index.html
+++ b/index.html
@@ -90,6 +90,13 @@
         </div>
     </div>
 </div>
-
+<div class="section-4">
+    <div class="main-img">
+        <div class="sec4-cont">
+        <h1>SPECTACULAR VISUALS AT<br> LIGHTNING SPEED</h1>
+        <p>Harness the might of a custom CPU, GPU and SSD that deliver breathtaking graphics and smooth gameplay.</p>
+    </div>
+    </div>
+</div>
 </body>
 </html>
