--- a/index.html
+++ b/index.html
@@ -98,5 +98,39 @@
     </div>
     </div>
 </div>
+<!-- SECTION-5 -->
+
+<div class="section-5">
+    <div class="sec5-cont">
+    <h2>IMMERSIVE PLAY WITH THE<br> DUALSENSE® WIRELESS<br> CONTROLLER</h2>
+    <p>Discover a deeper gaming experience* with the incredibly tactile features of the innovative PS5 controller.</p>
+    </div>
+    <div class="sec5-grid">
+        <div class="sec5-box sec5-one">
+            <div class="sec5-img">
+                <video autoplay muted loop>
+                    <source src="assets/sec5-1.mp4" type="video/mp4 ">
+                </video>
+            </div>
+            <div class="sect5-content">
+                <h1>Adaptive Triggers</h1>
+                <p>Dynamic resistance mimics the tension of interactions with in-game<br> gear and objects in select PS5 games.</p>
+                <p>From pulling back an increasingly tight bowstring to hitting the brakes on a<br> speeding car, feel physically connected to your on-screen actions.</p>
+            </div>
+        </div>
+        <div class="sec5-box sec5-two">
+            <div class="sec5-img">
+                <video autoplay muted loop>
+                    <source src="assets/sec5-2.mp4" type="video/mp4 ">
+                </video>
+            </div>
+            <div class="sect5-content">
+                <h1>Haptic Feedback</h1>
+                <p>Responsive vibrations react to your in-game choices and simulate environmental factors in select PS5 games</p>
+                <p>In your hands, these dynamic vibrations can simulate the feeling of everything from environments to the recoil of different weapons.</p>
+            </div>
+        </div>
+    </div>
+</div>
 </body>
 </html>
