--- a/index.html
+++ b/index.html
@@ -132,5 +132,26 @@
         </div>
     </div>
 </div>
+
+<!-- SECTION-6 -->
+
+<div class="section-6">
+    <div class="question">
+        <h1>WHICH PS5 CONSOLE IS RIGHT FOR YOU?</h1>
+        <p>Choose how you play with a choice of Blu-ray Disc and all-digital consoles</p>
+    </div>
+    <div class="sec6-grid">
+        <div class="sec6-cont">
+        <div class="sec6-box "></div>
+        <h1>PS5 console</h1>
+        <p>Play PS5 and PS4 games on Blu-ray discs. You can also <br>download digital PS5 and PS4 games from<br> PlayStation Store.</p>
+    </div>
+    <div class="sec6-cont">
+        <div class="sec6-box box-2"></div>
+        <h1>PS5 Digital Edition</h1>
+        <p>An all-digital version of the PS5 console with no disc<br> drive. Download and play digital games from<br> PlayStation Store, with an option to extend your play <br>with an additional disc drive* (sold separately).</p>
+    </div>
+    </div>
+</div>
 </body>
 </html>
