--- a/index.html
+++ b/index.html
@@ -153,5 +153,50 @@
     </div>
     </div>
 </div>
+
+<!-- FOOTER -->
+<footer>
+    <div class="foot-cont">
+        <div class="fot-logo"></div>
+        <div class="ul-items">
+            <ul>
+                <span><li>About</li></span>
+                <li>About SIE</li>
+                <li>Careers</li>
+                <li>PlayStation Studios</li>
+                <li>Corporate</li>
+            </ul>
+            <ul>
+                <span><li>Products</li></span>
+                <li>PS5</li>
+                <li>PS4</li>
+                <li>PS VR2</li>
+                <li>Games</li>
+            </ul>
+            <ul>
+                <span><li>Values</li></span>
+                <li>Environment</li>
+                <li>Accesability</li>
+                <li>Online Safety</li>
+                <li>Diversity</li>
+            </ul>
+            <ul>
+                <span><li>Support</li></span>
+                <li>Support Hub</li>
+                <li>PlayStation Safety</li>
+                <li>Psn Status</li>
+                <li>Password Reset</li>
+            </ul>
+            <ul>
+                <span><li>Resources</li></span>
+                <li>PSN terms of services</li>
+                <li>Health ratings</li>
+                <li>Developers</li>
+                <li>Glossary</li>
+            </ul>
+        </div>
+        <div class="sony-logo"></div>
+    </div>
+</footer>
 </body>
 </html>
